@@ -54,10 +54,9 @@ class Config:
 		self.filename = filename
 		self.parser = ConfigParser.ConfigParser()
 		self.parser.read([self.filename])
-		if sys.platform.startswith("win"):
-			LOGDIR="C:\\My Documents"
-		else:
-			LOGDIR="~"
+
+		LOGDIR=os.path.join(self.filename.rsplit(os.sep, 1)[0], "logs")
+
 		self.sections = { 
 "server":{"server":('server.slsknet.org', 2240), "login":None,"passw":None, \
 "firewalled":1, "ctcpmsgs": 0, "autosearch":[],"autoreply":"", "roomencoding": {}, \
@@ -87,7 +86,7 @@ class Config:
 "words": {"censored": [], "autoreplaced": {"teh ": "the ", "taht ": "that ", "tihng": "thing", "youre": "you're", "jsut": "just", "thier": "their", "tihs": "this"}, "censorfill": "*", "censorwords": False, "replacewords": False,  "tab": True, "dropdown": True, "characters": 2, "roomnames": True, "buddies": True, "roomusers": True, "commands": True, "aliases": True, "onematch": True }, \
 \
 "logging": {"logcollapsed":0, "logsdir":os.path.expanduser(LOGDIR), "rooms_timestamp": "%H:%M:%S",\
-"private_timestamp": "%c", "timestamps": 1, "privatechat":0, "chatrooms":0,"transfers":0}, \
+"private_timestamp": "%c", "log_timestamp": "%Y-%m-%d %H:%M:%S", "timestamps": 1, "privatechat":0, "chatrooms":0,"transfers":0}, \
 \
 "privatechat":{"store":0, "users":[]}, \
 \
@@ -167,7 +166,7 @@ class Config:
 					print "Unknown config section:", i
 				elif j not in self.sections[i].keys() and j != "filter":
 					print "Unknown config option", j, "section", i
-				elif j in ['login','passw','enc',  'downloaddir', 'uploaddir', 'customban','descr','pic','logsdir','incompletedir', 'autoreply', 'afterfinish', 'downloadregexp', 'afterfolder', 'default', 'chatfont', "npothercommand", "npplayer", "npformat", "private_timestamp", "rooms_timestamp"] or (i == "ui" and j not in ["roomlistcollapsed", "tabclosers",  'buddylistinchatrooms', "trayicon", "showaway", "usernamehotspots", "exitdialog", "spellcheck", "chat_hidebuttons", "notexists", "soundenabled", "transalpha",  "enabletrans", "speechenabled", "enablefilters",  "width", "height", "labelmain", "labelrooms", "labelprivate", "labelinfo", "labelbrowse", "labelsearch"]) or (i == "words" and j not in ["completion", "censorwords", "replacewords", "autoreplaced", "censored", "characters", "tab", "dropdown", "roomnames", "buddies", "roomusers", "commands", "aliases", "onematch"]) or (i == "language" and j not in ["definelanguage", "setlanguage"]):
+				elif j in ['login','passw','enc',  'downloaddir', 'uploaddir', 'customban','descr','pic','logsdir','incompletedir', 'autoreply', 'afterfinish', 'downloadregexp', 'afterfolder', 'default', 'chatfont', "npothercommand", "npplayer", "npformat", "private_timestamp", "rooms_timestamp", "log_timestamp"] or (i == "ui" and j not in ["roomlistcollapsed", "tabclosers",  'buddylistinchatrooms', "trayicon", "showaway", "usernamehotspots", "exitdialog", "spellcheck", "chat_hidebuttons", "notexists", "soundenabled", "transalpha",  "enabletrans", "speechenabled", "enablefilters",  "width", "height", "labelmain", "labelrooms", "labelprivate", "labelinfo", "labelbrowse", "labelsearch"]) or (i == "words" and j not in ["completion", "censorwords", "replacewords", "autoreplaced", "censored", "characters", "tab", "dropdown", "roomnames", "buddies", "roomusers", "commands", "aliases", "onematch"]) or (i == "language" and j not in ["definelanguage", "setlanguage"]):
 
 					self.sections[i][j] = val
 				else:
